base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trivial-go-web-app
  template:
    metadata:
      labels:
        app: trivial-go-web-app
    spec:
      containers:
      - name: webserver-simple
        imagePullPolicy: Always
        image: ghcr.io/lukonjun/example-nodejs:latest
        ports:
        - containerPort: 80
